--- a/Pract5/style.css
+++ b/Pract5/style.css
@@ -30,43 +30,40 @@ h1{
     border: 3px solid black;
     font-size: 20px;
     padding: 20px;
-    height: 30vh;
+    height: 25vh;
     overflow: hidden;
 }
 
 .caption-1{
-    background-color:#bcff67;
+    background-color: cornflowerblue;
 }
 .caption-2{
-    background-color:#5d223f;
+    background-color: midnightblue;
     color: white;
 }
 .caption-3{
-    background-color: #ff66b0;
+    background-color: gold;
 }
 
+@media (max-width: 768px){
+    .col-sm-12{
+        width:100%;
+    }
+}
 
 @media (min-width: 769px) and (max-width: 992px){
     .col-md-6{
-
         width:50%;
-
     }
+
     .col-md-12{
-
         width:100%;
-
     }
 
     .block {
         float: left;
     }
 
-}
-@media (max-width: 768px){
-    .col-sm-12{
-        width:100%;
-    }
 }
 
 @media (min-width: 993px){
