--- a/Pract5/style.css
+++ b/Pract5/style.css
@@ -1,77 +1,180 @@
-*{
-    box-sizing: border-box;
+@media (min-width: 992px) {
+.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8,
+.col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+float: left;
 }
-h1{
-    text-align: center;
-    margin-top: 1rem;
+.col-lg-1 {
+width: 8.33%;
 }
-.container{
-    width: 98%;
-    margin: 0 auto;
+.col-lg-2 {
+width: 16.66%;
 }
-.block {
-    padding: 2%;
+.col-lg-3 {
+width: 25%;
 }
-
-.caption {
-    position: absolute;
-    font-size: 3vh;
-    right: 0;
-    top: 0;
-    width: 150px;
-    border: 2px solid black;
-    border-top-style: none;
-    border-right-style: none;
-    text-align: center;
+.col-lg-4 {
+width: 33.33%;
 }
-.main{
-    position: relative;
-    background-color: rgba(32, 54, 50, 0.21);
-    border: 3px solid black;
-    font-size: 20px;
-    padding: 20px;
-    height: 25vh;
-    overflow: hidden;
+.col-lg-5 {
+width: 41.66%;
+}
+.col-lg-6 {
+width: 50%;
 }
 
-.caption-1{
-    background-color: cornflowerblue;
+.col-lg-7 {
+width: 58.33%;
 }
-.caption-2{
-    background-color: midnightblue;
-    color: white;
+.col-lg-8 {
+width: 66.66%;
 }
-.caption-3{
-    background-color: gold;
+.col-lg-9 {
+width: 75%;
 }
-
+.col-lg-10 {
+width: 83.33%;
+}
+.col-lg-11 {
+width: 91.66%;
+}
+.col-lg-12 {
+width: 100%;
+}
+}
+@media (min-width: 768px) and (max-width: 992px) {
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8,
+.col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+float: left;}
+.col-md-1 {
+width: 8.33%;
+}
+.col-md-2 {
+width: 16.66%;
+}
+.col-md-3 {
+width: 25%;
+}
+.col-md-4 {
+width: 33.33%;
+}
+.col-md-5 {
+width: 41.66%;
+}
+.col-md-6 {
+width: 50%;
+}
+.col-md-7 {
+width: 58.33%;
+}
+.col-md-8 {
+width: 66.66%;
+}
+.col-md-9 {
+width: 75%;
+}
+.col-md-10 {
+width: 83.33%;
+}
+.col-md-11 {
+width: 91.66%;
+}
+.col-md-12 {
+width: 100%;
+}
+}
 @media (max-width: 768px){
-    .col-sm-12{
-        width:100%;
+     col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8,
+    .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+      float: left;
+
+
+    
+
     }
+    .col-sm-1 {
+      width: 8.33%;
+    }
+    .col-sm-2 {
+      width: 16.66%;
+    }
+    .col-sm-3 {
+      width: 25%;
+    }
+    .col-sm-4 {
+      width: 33.33%;
+    }
+    .col-sm-5 {
+      width: 41.66%;
+    }
+    .col-sm-6 {
+      width: 50%;
+    }
+    .col-sm-7 {
+      width: 58.33%;
+    }
+    .col-sm-8 {
+      width: 66.66%;
+    }
+    .col-sm-9 {
+      width: 75%;
+    }
+    .col-sm-10 {
+      width: 83.33%;
+    }
+    .col-sm-11 {
+      width: 91.66%;
+    }
+    .col-sm-12 {
+      width: 100%;
+    }  
+   } 
+.center {
+    text-align: center;
 }
 
-@media (min-width: 769px) and (max-width: 992px){
-    .col-md-6{
-        width:50%;
-    }
-
-    .col-md-12{
-        width:100%;
-    }
-
-    .block {
-        float: left;
-    }
-
+.row {
+    width: 100%;
 }
 
-@media (min-width: 993px){
-    .col-lg-4{
-        width:33.33%;
-    }
+#container {
+    position: relative;
+    padding: 10px;
+    padding-top: 30px;
+    background-color: rgb(65, 190, 243);
+    border: 3px solid black;
+    margin: 10px;
+}
+.oneC {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(228, 228, 26);
+    padding: 0 10px 5px;
+    border-left: 3px solid black;
+    border-bottom: 3px solid black;
+    margin: 0;
+    color: #fff;
+}
+.threeC {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(255, 34, 0);
+    padding: 0 10px 5px;
+    border-left: 3px solid black;
+    border-bottom: 3px solid black;
+    margin: 0;
+    color: #fff;
+}
 
-    .block {
-        float: left;
-    }
+.twoC {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgb(81, 255, 0);
+    padding: 0 10px 5px;
+    border-left: 3px solid black;
+    border-bottom: 3px solid black;
+    margin: 0;
+    color: #fff;
 }
