--- a/Pract0/style.css
+++ b/Pract0/style.css
@@ -1,54 +1,41 @@
+body {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.parent-block {
+    position: relative;
+}
+
+.block {
+    width: 200px;
+    padding: 20px;
+    margin: 10px;
+    color: #fff;
+}
+
+.block-header {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+/* Кольори фону для блоків 1-4 */
 .block1 {
-  background-color: #ff0000;
+    background-color: #FFD700;
 }
+
 .block2 {
-  background-color: #00ff00;
+    background-color: #8FBC8F;
 }
+
 .block3 {
-  background-color: #0000ff;
+    background-color: #87CEFA;
 }
+
 .block4 {
-  background-color: #ffff00;
-}
-
-/* Блоки з заголовками */
-
-.block1-header {
-  background-color: #000000;
-  width: 100px;
-}
-.block2-header {
-  background-color: #ffffff;
-  width: 100px;
-}
-.block3-header {
-  background-color: #000000;
-  width: 100px;
-}
-.block4-header {
-  background-color: #ffffff;
-  width: 100px;
-}
-
-/* Позиціонування заголовків */
-
-.block1-header {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.block2-header {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.block3-header {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-.block4-header {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+    background-color: #FFA07A;
 }
