--- a/Pract0/style.css
+++ b/Pract0/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     display: flex;
-    flex-direction: column
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
