--- a/Pract0/style.css
+++ b/Pract0/style.css
@@ -41,16 +41,20 @@ table {
 
 .block1 {
     background-color: #FFD700;
+    color: #8f2fa2;
 }
 
 .block2 {
     background-color: #8FBC8F;
+    color: #3c2fa2;
 }
 
 .block3 {
     background-color: #87CEFA;
+    color: #692fa2;
 }
 
 .block4 {
     background-color: #FFA07A;
+    color: #65154c;
 }
