--- a/Pract0/style.css
+++ b/Pract0/style.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+h1, h2 {
+    font-family: 'Roboto', sans-serif;
+}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:ital,wght@0,400;0,900;1,700&display=swap');
+h3 {
+    font-family: 'Raleway', sans-serif;
+}
+@import url('https://fonts.googleapis.com/css2?family=Xanh+Mono&display=swap');
+div{
+    font-family: 'Xanh Mono', monospace;
+}
+h3 {
+    font-size: 120%;
+  }
 body {
     margin: 0;
     min-height: 100vh;
