--- a/KP/style.css
+++ b/KP/style.css
@@ -13,15 +13,84 @@ div{
 h3 {
     font-size: 120%;
   }
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.block {
+    width: 200px;
+    padding: 20px;
+    margin: 10px;
+}
+
+table {
+      border-collapse: collapse;
+    }
+
+    th, td {
+      border: 1px solid #dddddd;
+      text-align: left;
+      padding: 8px;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+
+.block-header {
+    width: 120px;
+    height: 7%;
+    font-size: 120%;
+    box-sizing: border-box;
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+}
+
 .block1 {
-    background-color: rgb(240, 187, 107);
-    color:rgb(64, 212, 246);
+    background-color: #FFD700;
+    color: #8f2fa2;
     width: 100%;
     font-size: 100%;
     height: 100%;
     border: 2px solid rgb(79, 54, 0);
-    display: flex;
-  }
+}
+
+.block2 {
+    background-color: #8FBC8F;
+    color: #3c2fa2;
+    width: 100%;
+    font-size: 100%;
+    height: 100%;
+    border: 2px solid rgb(87, 3, 103);
+}
+
+.block3 {
+    background-color: #87CEFA;
+    color: #692fa2;
+    width: 100%;
+    font-size: 100%;
+    height: 100%;
+    border: 2px solid black;
+}
+
+.block4 {
+    background-color: #FFA07A;
+    color: #65154c;
+    width: 100%;
+    height: 100%;
+    font-size: 100%;
+    border: 2px solid rgb(30, 0, 74);
+}
   
   .text {
     background-color: rgb(98, 133, 238);
@@ -31,19 +100,8 @@ h3 {
     height: 18%;
     border: 2px solid;
     display: flex;
-
-
   }
 
-  .block2 {
-    background-color: rgb(125, 240, 198);
-    color:rgb(2, 49, 33);
-    width: 100%;
-    font-size: 100%;
-    height: 100%;
-    border: 2px solid rgb(87, 3, 103);
-    display: flex;
-  }
   .list {
     background-color: rgb(251, 255, 3);
     color:blue;
@@ -51,16 +109,6 @@ h3 {
     font-size: 120%;
     height: 15%;
     border: 2px solid;
-    display: flex;
-  }
-
-  .block3 {
-    background-color: rgb(234, 136, 208);
-    color: rgb(176, 0, 0);
-    width: 100%;
-    font-size: 100%;
-    height: 100%;
-    border: 2px solid black;
     display: flex;
   }
 
@@ -74,16 +122,6 @@ h3 {
     display: flex;
   }
 
-  .block4 {
-    background-color: rgb(79, 153, 101);
-    color:blueviolet;
-    width: 100%;
-    height: 100%;
-    font-size: 100%;
-    border: 2px solid rgb(30, 0, 74);
-    display: flex;
-  }
-
   .picture {
     background-color:rgb(213, 187, 107);
     color:rgb(62, 12, 12);
@@ -92,30 +130,4 @@ h3 {
     font-size: 120%;
     border: 2px solid;
     display: flex;
-  }
-
-  table {
-    border: 2px solid black;
-    padding: 2px;
-    text-align: center;
-    border-collapse: collapse;
-  }
-
-  th,
-  td {
-    border: 1px black;
-  }
-
-  tr {
-    border: 2px solid black;
-  }
-
-  th {
-    text-align: center;
-    border: 2px solid black;
-  }
-
-  td {
-    text-align: left;
-    border: 2px solid black;
   }
