--- a/KP/style.css
+++ b/KP/style.css
@@ -91,4 +91,13 @@ table {
     font-size: 100%;
     border: 2px solid rgb(30, 0, 74);
 }
-  
+
+  .picture {
+    background-color:rgb(213, 187, 107);
+    color:rgb(62, 12, 12);
+    width: 100%;
+    height: 7%;
+    font-size: 120%;
+    border: 2px solid;
+    display: flex;
+  }
