--- a/KP/style.css
+++ b/KP/style.css
@@ -32,20 +32,6 @@ body {
     margin: 10px;
 }
 
-table {
-      border-collapse: collapse;
-    }
-
-    th, td {
-      border: 1px solid #dddddd;
-      text-align: left;
-      padding: 8px;
-    }
-
-    th {
-      background-color: #f2f2f2;
-    }
-
 .block-header {
     width: 120px;
     height: 7%;
@@ -63,34 +49,69 @@ table {
     font-size: 100%;
     height: 100%;
     border: 2px solid rgb(79, 54, 0);
-}
+    display: flex;
+  }
+  
+  .text {
+    background-color: rgb(98, 133, 238);
+    color:rgb(160, 106, 47);
+    width: 100%;
+    font-size: 120%;
+    height: 18%;
+    border: 2px solid;
+    display: flex;
 
-.block2 {
-    background-color: #8FBC8F;
+
+  }
+
+  .block2 {
+   background-color: #8FBC8F;
     color: #3c2fa2;
     width: 100%;
     font-size: 100%;
     height: 100%;
     border: 2px solid rgb(87, 3, 103);
-}
+    display: flex;
+  }
+  .list {
+    background-color: rgb(251, 255, 3);
+    color:blue;
+    width: 100%;
+    font-size: 120%;
+    height: 15%;
+    border: 2px solid;
+    display: flex;
+  }
 
-.block3 {
+  .block3 {
     background-color: #87CEFA;
     color: #692fa2;
     width: 100%;
     font-size: 100%;
     height: 100%;
     border: 2px solid black;
-}
+    display: flex;
+  }
 
-.block4 {
+  .table {
+    background-color:rgb(152, 0, 129);
+    color: aliceblue;
+    width: 100%;
+    font-size: 120%;
+    height: 20%;
+    border: 2px;
+    display: flex;
+  }
+
+  .block4 {
     background-color: #FFA07A;
     color: #65154c;
     width: 100%;
     height: 100%;
     font-size: 100%;
     border: 2px solid rgb(30, 0, 74);
-}
+    display: flex;
+  }
 
   .picture {
     background-color:rgb(213, 187, 107);
@@ -100,4 +121,30 @@ table {
     font-size: 120%;
     border: 2px solid;
     display: flex;
+  }
+
+  table {
+    border: 2px solid black;
+    padding: 2px;
+    text-align: center;
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    border: 1px black;
+  }
+
+  tr {
+    border: 2px solid black;
+  }
+
+  th {
+    text-align: center;
+    border: 2px solid black;
+  }
+
+  td {
+    text-align: left;
+    border: 2px solid black;
   }
