--- a/KP/style.css
+++ b/KP/style.css
@@ -24,7 +24,7 @@ h3 {
     display: flex;
   }
   
-  .text {
+  .block-header {
     background-color: rgb(98, 133, 238);
     color:rgb(160, 106, 47);
     width: 100%;
@@ -45,15 +45,6 @@ h3 {
     border: 2px solid rgb(87, 3, 103);
     display: flex;
   }
-  .list {
-    background-color: rgb(251, 255, 3);
-    color:blue;
-    width: 100%;
-    font-size: 120%;
-    height: 15%;
-    border: 2px solid;
-    display: flex;
-  }
 
   .block3 {
     background-color: #87CEFA;
@@ -65,16 +56,6 @@ h3 {
     display: flex;
   }
 
-  .table {
-    background-color:rgb(152, 0, 129);
-    color: aliceblue;
-    width: 100%;
-    font-size: 120%;
-    height: 20%;
-    border: 2px;
-    display: flex;
-  }
-
   .block4 {
     background-color: #FFA07A;
     color: #65154c;
@@ -82,16 +63,6 @@ h3 {
     height: 100%;
     font-size: 100%;
     border: 2px solid rgb(30, 0, 74);
-    display: flex;
-  }
-
-  .picture {
-    background-color:rgb(213, 187, 107);
-    color:rgb(62, 12, 12);
-    width: 100%;
-    height: 7%;
-    font-size: 120%;
-    border: 2px solid;
     display: flex;
   }
 
