--- a/KP/style.css
+++ b/KP/style.css
@@ -1,3 +1,15 @@
+.main-header {
+  font-family: "Roboto", sans-serif;
+}
+
+.block-header {
+  font-family: "Open Sans", sans-serif;
+}
+
+.block-content {
+  font-family: "Ubuntu", sans-serif;
+}
+
 .block1 {
     background-color: #FFD700;
     color: #8f2fa2;
