--- a/KP/style.css
+++ b/KP/style.css
@@ -1,3 +1,62 @@
+@media (max-width: 768px) {
+  .blocks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .blocks {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .block1,
+  .block2 {
+    width: 50%;
+  }
+
+  .block3,
+  .block4 {
+    width: 50%;
+  }
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+  .blocks {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .block1,
+  .block2,
+  .block3 {
+    width: 33.33%;
+  }
+
+  .block4 {
+    width: 100%;
+  }
+}
+
+@media (min-width: 1201px) {
+  .blocks {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .block1,
+  .block2,
+  .block3,
+  .block4 {
+    width: 25%;
+  }
+}
+
 .main-header {
   font-family: "Roboto", sans-serif;
 }
