--- a/English/style.css
+++ b/English/style.css
@@ -75,3 +75,29 @@ p {
         margin: 0 50px;
     }
 }
+
+ table {
+    border: 2px solid black;
+    padding: 2px;
+    text-align: center;
+    border-collapse: collapse;
+  }
+
+  th,
+  td {
+    border: 1px black;
+  }
+
+  tr {
+    border: 2px solid black;
+  }
+
+  th {
+    text-align: center;
+    border: 2px solid black;
+  }
+
+  td {
+    text-align: left;
+    border: 2px solid black;
+  }
