--- a/English/style.css
+++ b/English/style.css
@@ -1,3 +1,12 @@
+.container {
+  width: 98%;
+  margin: 0 auto;
+}
+
+.block {
+  width: 33.33%;
+  margin-right: 10px;
+}
 
 table {
   width: 33.3%;
